--- a/eng/pipelines/docindex.yml
+++ b/eng/pipelines/docindex.yml
@@ -95,7 +95,7 @@ jobs:
         inputs:
           pwsh: true
           filePath: eng/common/scripts/Update-DocsMsPackages.ps1
-          arguments: -DocRepoLocation $(DailyDocRepoLocation)
+          arguments: -DocRepoLocation $(DailyDocRepoLocation) -ImageId '$(DocValidationImageId)'
         displayName: Update Docs Onboarding for Daily branch
       - task: Powershell@2
         inputs:
