--- a/sdk/storage/azure-storage-perf/pom.xml
+++ b/sdk/storage/azure-storage-perf/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>perf-test-core</artifactId>
       <version>1.0.0-beta.1</version> <!-- {x-version-update;com.azure:perf-test-core;current} -->
     </dependency>
+
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-core</artifactId>
+      <version>1.29.1</version>
+    </dependency>
   </dependencies>
 
   <profiles>
